20220331 - Removed some unnecessary files
- Removed Stock files and Stock.html from repo.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,9 @@
   </head>
 
   <body>
-    <section class = "content-banner" style="background-image: url('image/stock-market-banner.png');">
-      <!-- <p>Mockplus - Design Faster. Collaborate Better.</p>
-      <p>Prototype, design, collaborate, and design systems all in Mockplus</p>  -->
-      <!-- <a href=“/start” class=“banner-btn posts-btn” onclick=“ga(‘send’, ‘event’, ‘Mockplus-sign-up1’, ‘click’, ‘Mockplus-home’, 1);“>Get Started for Free</a> -->
-    </section>
-
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
-      <a class="navbar-brand" href="#">Pandas Group</a>
+      <a class="navbar-brand" href="#">Pandas Consulting Group</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -33,7 +28,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
 
           <!-- Navbar with individual items listed out -->
@@ -63,6 +58,13 @@
         </ul>
       </div>
     </nav>
+
+    <!-- Header Image -->
+    <section class = "content-banner" style="background-image: url('image/stock-market-banner.png');">
+      <!-- <p>Mockplus - Design Faster. Collaborate Better.</p>
+      <p>Prototype, design, collaborate, and design systems all in Mockplus</p>  -->
+      <!-- <a href=“/start” class=“banner-btn posts-btn” onclick=“ga(‘send’, ‘event’, ‘Mockplus-sign-up1’, ‘click’, ‘Mockplus-home’, 1);“>Get Started for Free</a> -->
+    </section>
 
     <main role="main" class="container-fluid">
       <div class="row no-gutters">
@@ -106,7 +108,7 @@
                   <ul>
                     <li>Brandon Jhun</li>
                     <li>James Yoos</li>
-                    <li>Ariana F</li>
+                    <li>Arianna Feemster</li>
                     <li>Tracie Bautista Nguyen</li>
                     <li>Luan Nguyen</li>
                   </ul>
