nav & dropdown links

--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
         <ul class="navbar-nav mr-auto">
 
           <!-- Navbar with individual items listed out -->
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#one">Technology</a>
+           <li class="nav-item">
+            <a class="nav-link" href="/html/stocks.html">Stocks</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#two">Automobile</a>
+            <a class="nav-link" href="/html/category.html">Category</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#three">Pharmaceutical</a>
+            <a class="nav-link" href="/html/rawdata.html">Raw Data</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#four">Finance</a>
-          </li> -->
+            <a class="nav-link" href="/html/visualizations.html">Visualizations</a>
+          </li> 
 
           <!-- Navbar with dropdown listing out each item -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" id = "navbardrop" data-toggle = "dropdown" href="#">Industry</a>
             <div class = "dropdown-menu">
-                <a class = "dropdown-item" href = "#">Technology</a>
-                <a class = "dropdown-item" href = "#">Automobile</a>
-                <a class = "dropdown-item" href = "#">Pharmaceutical</a>
-                <a class = "dropdown-item" href = "#">Finance</a>
+                <a class = "dropdown-item" href ="html/technology.html">Technology</a>
+                <a class = "dropdown-item" href = "html/automobile.html">Automobile</a>
+                <a class = "dropdown-item" href = "html/pharmaceutical.html">Pharmaceutical</a>
+                <a class = "dropdown-item" href = "html/finance.html">Finance</a>
             </div>
           </li>
         </ul>
