--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     
     <!-- Style Sheet -->
-    <link rel="stylesheet" type = "text/css" href="style.css">
+    <link rel="stylesheet" type = "text/css" href="javascript/style.css">
   </head>
 
   <body>
@@ -51,7 +51,7 @@
             <div class = "dropdown-menu">
                 <a class = "dropdown-item" href ="html/technology.html">Technology</a>
                 <a class = "dropdown-item" href = "html/pharmaceutical.html">Pharmaceutical</a>
-                <a class = "dropdown-item" href = "html/finance.html">Finance</a>
+                <a class = "dropdown-item" href = "html/banking.html">Banking</a>
             </div>
           </li>
         </ul>
