--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" id = "navbardrop" data-toggle = "dropdown" href="#">Industry</a>
             <div class = "dropdown-menu">
-                <a class = "dropdown-item" href ="html/technology.html">Technology</a>
-                <a class = "dropdown-item" href = "html/pharmaceutical.html">Pharmaceutical</a>
-                <a class = "dropdown-item" href = "html/banking.html">Banking</a>
+                <a class = "dropdown-item" href ="technology.html">Technology</a>
+                <a class = "dropdown-item" href = "pharmaceutical.html">Pharmaceutical</a>
+                <a class = "dropdown-item" href = "banking.html">Banking</a>
             </div>
           </li>
         </ul>
