--- a/html/banking.html
+++ b/html/banking.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1>TOP BANKING STOCK TRENDS ANALYSIS</h1>
+        <h1>Banking Stock Analysis</h1>
         <p>Use the interactive charts below to explore the Trends and Paterns</p>
       </div>
     </div>
