--- a/html/pharm.html
+++ b/html/pharm.html
@@ -28,7 +28,7 @@
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
-            <h3 class="panel-title">Stock Market Capital</h3>
+            <h3 class="panel-title">Key Information</h3>
           </div>
           <div id="sample-metadata" class="panel-body"></div>
         </div>
