--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="aboutus.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/html/rawdata.html">Raw Data</a>
+            <a class="nav-link" href="rawdata.html">Raw Data</a>
           </li>
 
           <!-- Navbar with dropdown listing out each item -->
