20220405 - Updated more of the html file
- Made updates to index, aboutus, and rawdata html file.

--- a/aboutus.html
+++ b/aboutus.html
@@ -66,34 +66,101 @@
       
       <!-- About Us -->
       <div>
-        <div class = "home-content-format">
-            <h1 class = "text-style">About Us</h1>
-            <p>
-              We are a group of passionate individuals looking to make you money.
-            </p>
-            <div class = "home-content-format">
-              <h1 class = "text-style">Brandon Jhun</h1>
-            </div>
-            <br>
+        <div style = "padding: 0px 0px 0px 50px">
+          <h1 class = "text-style">About Us</h1>
+          <p class = "text-format">
+            We are a group of passionate individuals looking to bring stock market information to you.
+          </p>
 
-            <div class = "home-content-format">
-              <h1 class = "text-style">James Yoo</h1>
-            </div>
-            <br>
+          <!-- Brandon -->
+          <div class = "home-content-format">
+            <div class = "row">
+              <!-- Image -->
+              <div class = "col-sm-1">
+                <img src = "" alt = "Brandon Jhun Picture">
+              </div>
 
-            <div class = "home-content-format">
-              <h1 class = "text-style">Arianna Feemster</h1>
+              <div class = "col-sm">
+                <u style = "color: white"><h2 class = "text-style">Brandon Jhun</h2></u>
+                <p class = "text-format">
+                  Driven to find the next big thing, this young analyst is making a name for himself.
+                </p>
+              </div>
             </div>
-            <br>
+          </div>
+          <br>
 
-            <div class = "home-content-format">
-              <h1 class = "text-style">Tracie Bautista Nguyen</h1>
-            </div>
-            <br>
+          <!-- James -->
+          <div class = "home-content-format">
+            <div class = "row">
+              <!-- Image -->
+              <div class = "col-sm-1">
+                <img src = "" alt = "James Yoo Picture">
+              </div>
 
-            <div class = "home-content-format">
-              <h1 class = "text-style">Luan Nguyen</h1>
+              <div class = "col-sm">
+                <u style = "color: white"><h2 class = "text-style">James Yoo</h2></u>
+                <p class = "text-format">
+                  Hardworking and smart, this analyst works hard to bring forth the relevant data to make those critical decisions easier.
+                </p>
+              </div>
             </div>
+          </div>
+          <br>
+
+          <!-- Arianna -->
+          <div class = "home-content-format">
+            <div class = "row">
+              <!-- Image -->
+              <div class = "col-sm-1">
+                <img src = "" alt = "Arianna Feemster Picture">
+              </div>
+
+              <div class = "col-sm">
+                <u style = "color: white"><h2 class = "text-style">Arianna Feemster</h2></u>
+                <p class = "text-format">
+                  Easygoing and ready at a moments notice, our budding analyst is ready to make an impact through her carefully crafted analysis.
+                </p>
+              </div>
+            </div>
+          </div>
+          <br>
+
+          <!-- Tracie -->
+          <div class = "home-content-format">
+            <div class = "row">
+              <!-- Image -->
+              <div class = "col-sm-1">
+                <img src = "" alt = "Tracie Bautista Nguyen Picture">
+              </div>
+
+              <div class = "col-sm">
+                <u style = "color: white"><h2 class = "text-style">Tracie Bautista Nguyen</h2></u>
+                <p class = "text-format">
+                  Experienced and passionate, this analyst brings a wealth of information and ideas to the table in grab what's necessary to create a wonderful portfolio for you.
+                </p>
+              </div>
+            </div>
+          </div>
+          <br>
+
+          <!-- Luan -->
+          <div class = "home-content-format">
+            <div class = "row">
+              <!-- Image -->
+              <div class = "col-sm-1">
+                <img src = "" alt = "Luan Nguyen Picture">
+              </div>
+
+              <div class = "col-sm">
+                <u style = "color: white"><h2 class = "text-style">Luan Nguyen</h2></u>
+                <p class = "text-format">
+                  Motived to make an impact, our analyst is willing to venture anywhere to take care of business.
+                </p>
+              </div>
+            </div>
+          </div>
+          
         </div>
         <br>
 
