--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <p class = "text-format">
             <ul class = "text-format">
               <li>Brandon Jhun</li>
-              <li>James Yoos</li>
+              <li>James Yoo</li>
               <li>Arianna Feemster</li>
               <li>Tracie Bautista Nguyen</li>
               <li>Luan Nguyen</li>
@@ -113,7 +113,7 @@
       </div>
       <br>
 
-      <div>
+      <div style = "padding: 0px 0px 0px 45px">
         <div class = "home-content-format">
           <h1 class = "text-style">Top Sellers</h1>
         </div>
