20220406 - Updated html files
- Updated index, aboutus, rawdata html to match.
- Consolidated pharma.css, bank.css, tech.css into style.css.
- Formatted code for tech.html, pharma.html, banking.html.
  - Added the navbar to all.
- Added new image as banner for website.

--- a/aboutus.html
+++ b/aboutus.html
@@ -46,9 +46,9 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" id = "navbardrop" data-toggle = "dropdown" href="#">Industry</a>
             <div class = "dropdown-menu">
-                <a class = "nav-link-dropdown dropdown-item" href = "tech.html">Technology</a>
-                <a class = "nav-link-dropdown dropdown-item" href = "pharma.html">Pharmaceutical</a>
-                <a class = "nav-link-dropdown dropdown-item" href = "banking.html">Banking</a>
+              <a class = "nav-link-dropdown dropdown-item" href = "banking.html">Banking</a>
+              <a class = "nav-link-dropdown dropdown-item" href = "pharma.html">Pharmaceutical</a>
+              <a class = "nav-link-dropdown dropdown-item" href = "tech.html">Technology</a>  
             </div>
           </li>
 
@@ -57,9 +57,10 @@
     </nav>
 
     <!-- Header Image -->
-    <section class = "content-banner" style="background-image: url('image/stock-market-banner.png');">
-      <div class="text-banner">PANDAS CONSULTING GROUP</div>
+    <section class = "content-banner" style="background-image: url('image/black-white-architecture-skyscraper.jpg');">
+      <div class="text-banner title-border">PANDAS CONSULTING GROUP</div>
     </section>
+    <br>
 
     <!-- Main Content -->
     <div role="main" class="container-fluid">
