--- a/banking.html
+++ b/banking.html
@@ -33,23 +33,25 @@
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-5">
-        <div id="line"></div>
-      </div>
+      
       <div class="col-md-5">
         <div id="boxplot"></div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
-        <div id="bubble"></div>
+        <div id="line"></div>
+        <div class="col-md-13">
+          <div id="bubble"></div>
+        </div>
+        
       </div>
     </div>
   </div>
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="javascript/plot.js"></script>
+  <script src="plotboxplot.js"></script>
   
 </body>
 
