--- a/banking.html
+++ b/banking.html
@@ -16,7 +16,7 @@
 
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
 
       <a class="navbar-brand" href="index.html">Pandas Consulting Group</a>
       
@@ -71,7 +71,7 @@
           </div>
           <div class="panel panel-primary">
             <div class="panel-heading">
-              <h3 class="panel-title">Key Information</h3>
+              <h3 class="panel-title">Stock Market Capital</h3>
             </div>
             <div id="sample-metadata" class="panel-body"></div>
           </div>
