--- a/tech.html
+++ b/tech.html
@@ -16,7 +16,7 @@
 
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
 
       <a class="navbar-brand" href="index.html">Pandas Consulting Group</a>
       
@@ -63,6 +63,7 @@
           <p>Use the interactive charts below to explore the Trends and Paterns</p>
         </div>
       </div>
+
       <div class="row">
         <div class="col-md-2">
           <div class="well">
@@ -76,13 +77,16 @@
             <div id="sample-metadata" class="panel-body"></div>
           </div>
         </div>
+
         <div class="col-md-5">
           <div id="line"></div>
         </div>
+
         <div class="col-md-5">
           <div id="boxplot"></div>
         </div>
       </div>
+
       <div class="row">
         <div class="col-md-12">
           <div id="bubble"></div>
