--- a/pharma.html
+++ b/pharma.html
@@ -16,7 +16,7 @@
 
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
 
       <a class="navbar-brand" href="index.html">Pandas Consulting Group</a>
       
@@ -63,12 +63,14 @@
           <p>Use the interactive charts below to explore the Trends and Paterns</p>
         </div>
       </div>
+
       <div class="row">
         <div class="col-md-2">
           <div class="well">
             <h5>Stock Name:</h5>
             <select id="selectData" onchange="optionChanged(this.value)"></select>
           </div>
+
           <div class="panel panel-primary">
             <div class="panel-heading">
               <h3 class="panel-title">Stock Market Capital</h3>
@@ -76,13 +78,16 @@
             <div id="sample-metadata" class="panel-body"></div>
           </div>
         </div>
+
         <div class="col-md-5">
           <div id="line"></div>
         </div>
+
         <div class="col-md-5">
           <div id="boxplot"></div>
         </div>
       </div>
+
       <div class="row">
         <div class="col-md-12">
           <div id="bubble"></div>
