--- a/rawdata.html
+++ b/rawdata.html
@@ -16,7 +16,7 @@
 
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
 
       <a class="navbar-brand" href="index.html">Pandas Consulting Group</a>
 
