20220406 - Fixed some grammer and phrasing
- Fixed some wording issue with the banking, pharma, and tech html page.

--- a/tech.html
+++ b/tech.html
@@ -59,8 +59,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 jumbotron text-center">
-          <h1>TOP TECHNOLOGY STOCK TRENDS ANALYSIS</h1>
-          <p>Use the interactive charts below to explore the Trends and Paterns</p>
+          <h1>TECHNOLOGY STOCK TRENDS</h1>
+          <p>Use the interactive charts below to explore the Trends and Patterns</p>
         </div>
       </div>
 
