20220406 - Updated About Us page
- Added pictures for everyone.
- Added short bio of those who have sent it in so far.

--- a/aboutus.html
+++ b/aboutus.html
@@ -77,8 +77,8 @@
           <div class = "home-content-format">
             <div class = "row">
               <!-- Image -->
-              <div class = "col-sm-1">
-                <img src = "" alt = "Brandon Jhun Picture">
+              <div class = "col-sm-2">
+                <img class = "img" src = "image/BrandonJhun.png" alt = "Brandon Jhun Picture">
               </div>
 
               <div class = "col-sm">
@@ -95,8 +95,8 @@
           <div class = "home-content-format">
             <div class = "row">
               <!-- Image -->
-              <div class = "col-sm-1">
-                <img src = "" alt = "James Yoo Picture">
+              <div class = "col-sm-2">
+                <img class = "img" src = "image/JamesYoo.jpg" alt = "James Yoo Picture">
               </div>
 
               <div class = "col-sm">
@@ -113,14 +113,17 @@
           <div class = "home-content-format">
             <div class = "row">
               <!-- Image -->
-              <div class = "col-sm-1">
-                <img src = "" alt = "Arianna Feemster Picture">
+              <div class = "col-sm-2">
+                <img class = "img" src = "image/AriannaFeemster.jpg" alt = "Arianna Feemster Picture">
               </div>
 
               <div class = "col-sm">
                 <u style = "color: white"><h2 class = "text-style">Arianna Feemster</h2></u>
                 <p class = "text-format">
                   Easygoing and ready at a moments notice, our budding analyst is ready to make an impact through her carefully crafted analysis.
+                  Arianna Feemster - A 4th year undergraduate majoring in neuroscience, and a Data Analyst. 
+                  She has a a passion for teaching and mentoring, and uses her skills with data in order to build teaching tools for others. Skilled in visualizing and synthesizing data, and presenting it in an accessible and informative way. 
+                  Arianna is very excited to be part of this project and share this financial data.
                 </p>
               </div>
             </div>
@@ -131,14 +134,18 @@
           <div class = "home-content-format">
             <div class = "row">
               <!-- Image -->
-              <div class = "col-sm-1">
-                <img src = "" alt = "Tracie Bautista Nguyen Picture">
+              <div class = "col-sm-2">
+                <img class = "img" src = "image/TracieBautista.jpg" alt = "Tracie Bautista Nguyen Picture">
               </div>
 
               <div class = "col-sm">
                 <u style = "color: white"><h2 class = "text-style">Tracie Bautista Nguyen</h2></u>
                 <p class = "text-format">
                   Experienced and passionate, this analyst brings a wealth of information and ideas to the table in grab what's necessary to create a wonderful portfolio for you.
+                  As the MBA in Business Management plus Data Analyst graduated from the University of California Irvine with a passion for condensing big data into a business insights story teller.
+                  Retrieving, analyzing, visualizing, predicting, and playing around with big data is her passion. 
+                  Bring along with rich experiences in Advertising business development in the past, good teamwork plus advanced skills in Data Analytics and visualization, Tracie is always ready to join any team and reach the Company’s goal together.
+                  Her special ability to interpret the coding | statistical languages to business language that will make the presentation to the Management gone through in a very catchy manner.
                 </p>
               </div>
             </div>
@@ -149,8 +156,8 @@
           <div class = "home-content-format">
             <div class = "row">
               <!-- Image -->
-              <div class = "col-sm-1">
-                <img src = "" alt = "Luan Nguyen Picture">
+              <div class = "col-sm-2">
+                <img class = "img" src = "image/LuanNguyen.png" alt = "Luan Nguyen Picture">
               </div>
 
               <div class = "col-sm">
