20220406 - Minor updates to the pages
- Made some minor updates to the title tags for these pages.

--- a/aboutus.html
+++ b/aboutus.html
@@ -85,6 +85,9 @@
                 <u style = "color: white"><h2 class = "text-style">Brandon Jhun</h2></u>
                 <p class = "text-format">
                   Driven to find the next big thing, this young analyst is making a name for himself.
+                  Driven to find the next big thing, this young future business analyst is ready to meet any challenge head on.
+                  He is experienced in many different fields of business ranging from operations and production management, as well as
+                  E-commerce and retail management. And with his wide ranging experience, he is ready to take your business to the next level.
                 </p>
               </div>
             </div>
