--- a/banking.html
+++ b/banking.html
@@ -59,7 +59,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 jumbotron text-center">
-          <h1>BANKING STOCK TRENDS</h1>
+          <h1>Banking Stock Trends</h1>
           <p>Use the interactive charts below to explore the Trends and Patterns</p>
         </div>
       </div>
@@ -68,14 +68,14 @@
       <div class="row">
         <div class="col-md-4">
           <div class="well">
-            <h5>Bank Stock Name:</h5>
+            <h5>Stock Name</h5>
              
             <!-- <select id="selectData" onchange="optionChanged(this.value)"></select> -->
             <!-- change the value of the select element to the correct file -->
             <select name="bankstocks" id="selectData">
               <option value="resources/bank30.json">Wells Fargo & Company</option>
-              <option value="resources/bank1mo.json">JPMorgan Chase & Co</option>
-              <option value="resources/bank30.json">Bank of America</option>
+              <option value="resources/JPM1mo.json">JPMorgan Chase & Co</option>
+              <option value="resources/BAC1mo.json">Bank of America</option>
             </select>
           </div>
           <!-- </div> -->
@@ -88,8 +88,8 @@
           </div>
         </div>
         
-        <div class="col-md-5">
-          <div id="boxplot"></div>
+        <div class="col-md-12">
+          <div id="myDiv"></div>
         </div>
       </div>
     </div>
