chart and graphs

--- a/pharma.html
+++ b/pharma.html
@@ -73,9 +73,9 @@
             <!-- <select id="selectData" onchange="optionChanged(this.value)"></select> -->
             <!-- change the value of the select element to the correct file -->
             <select name="bankstocks" id="selectData">
-              <option value="resources/pharm30_pfi.json">Merck & Co.</option>
+              <option value="resources/pharm30_pfi.json">Pfizer</option>
               <option value="resources/pharm30_jj.json">Johnson & Johnson</option>
-              <option value="resources/pharm30_mer.json">Pfizer</option>
+              <option value="resources/pharm30_mer.json">Merck & Co.</option>
             </select>
           </div>
           <!-- </div> -->
