20220406 - Final minute updates

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       </div>
       <br>
 
-      <div style = "padding: 0px 0px 0px 45px">
+      <!-- <div style = "padding: 0px 0px 0px 45px">
         <div class = "home-content-format">
           <h1 class = "text-style">Top Sellers</h1>
         </div>
@@ -125,7 +125,7 @@
         </div>
         <br>
 
-      </div>
+      </div> -->
 
     </div>
 
