--- a/tech.html
+++ b/tech.html
@@ -87,21 +87,36 @@
             <div id="sample-metadata" class="panel-body"></div>
           </div>
         </div>
-        
+        <br>
+
         <div class="col-md-5">
           <div id="boxplot"></div>
         </div>
       </div>
     </div>
+    <br>
 
     <div class="row">
       <div class="col-md-12">
         <div id="line"></div>
+        <br>
+        
         <div class="col-md-13">
           <div id="bubble"></div>
         </div>
       </div>
     </div>    
+    <br>
+
+    <div>
+      <div class = "col-md-12">
+        <div id="line"></div>
+        <div class = "col-md-13">
+          <div id="candle"></div>
+        </div>
+      </div>
+    </div> 
+    <br>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
