--- a/pharma.html
+++ b/pharma.html
@@ -122,7 +122,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="brandon.js"></script>
+    <script src="plot.js"></script>
       
   </body>
 
