20220407 - Added in the Project Scenario section

--- a/index.html
+++ b/index.html
@@ -114,18 +114,25 @@
       </div>
       <br>
 
-      <!-- <div style = "padding: 0px 0px 0px 45px">
+      <div style = "padding: 0px 0px 0px 45px">
         <div class = "home-content-format">
-          <h1 class = "text-style">Top Sellers</h1>
+          <h1 class = "text-style">Project Scenario</h1>
+          <p class = "text-format">
+            Pandas Consulting Group is hired to deeply dive into a stock market moderate set of data to find the trends 
+            of price movements and consult the Board of Investment on what the data is telling about. 
+            The story will be told by interactive visualization website.
+            The next level of this Project will be: Stock Price Prediction on a specific one and consult the Investors 
+            the potentiality of purshasing. 
+          </p>
         </div>
         <br>
 
-        <div class = "home-content-format">
+        <!-- <div class = "home-content-format">
           <h1 class = "text-style">Volume Trades</h1>
         </div>
-        <br>
+        <br> -->
 
-      </div> -->
+      </div>
 
     </div>
 
