20220407 - Made some minor updates in the html files

--- a/aboutus.html
+++ b/aboutus.html
@@ -70,7 +70,7 @@
         <div style = "padding: 0px 0px 0px 50px">
           <h1 class = "text-style">About Us</h1>
           <p class = "text-format">
-            We are a group of passionate individuals looking to bring stock market information to you.
+            We here at <a href = "index.html">Pandas Consulting Group</a> are a group of passionate individuals looking to bring stock market information to you.
           </p>
 
           <!-- Brandon -->
