--- a/banking.html
+++ b/banking.html
@@ -68,7 +68,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="well">
-            <h5>Stock Name</h5>
+            <h5>Portfolio:</h5>
              
             <!-- <select id="selectData" onchange="optionChanged(this.value)"></select> -->
             <!-- change the value of the select element to the correct file -->
