--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
           <p class = "text-format">
             <ul class = "text-format">
               <li>APIs</li>
-              <li>Beautifulsoup</li>
               <li>Flask</li>
+              <li>HTML/CSS</li>
               <li>Python/Pandas</li>
-              <li>SQL Database/PostgreSQL</li>
+              <li>SQL Database/PostgreSQL/SQLite</li>
               <li>Plot.ly</li>
-              <li>chart.js (JavaScript Library)</li>
+              <!-- <li>chart.js (JavaScript Library)</li> -->
               <!-- <li>Link to dataset: https://www.kaggle.com/code/faressayah/stock-market-analysis-prediction-using-lstm/data</li> -->
             </ul>
           </p>
@@ -98,7 +98,7 @@
 
         <!-- Team Introductions -->
         <div class = "col-sm-3 mx-auto home-content-format">
-          <h1 class = "text-style">Meet the Team</h1>
+          <a href = "aboutus.html"><h1 class = "text-style">Meet the Team</h1></a>
           <p class = "text-format">
             <ul class = "text-format">
               <li>Brandon Jhun</li>
