--- a/rawdata.html
+++ b/rawdata.html
@@ -41,6 +41,9 @@
           <li class="nav-item">
             <a class="nav-link" href="rawdata.html">Raw Data</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="api.html">API</a>
+          </li>
 
           <!-- Navbar with dropdown listing out each item -->
           <li class="nav-item dropdown">
